[gd_scene load_steps=5 format=3 uid="uid://mphpkx2kp3it"]

[ext_resource type="Script" path="res://scripts/ui/ability_select/ability_option_slot.gd" id="2_52ofi"]
[ext_resource type="Theme" uid="uid://b0doaimn3yw0i" path="res://theme/main_theme.tres" id="3_brdx4"]
[ext_resource type="Texture2D" uid="uid://bbxallwadqmji" path="res://icon.svg" id="3_taed0"]
[ext_resource type="Theme" uid="uid://dke80ydpw44no" path="res://theme/classes_select.tres" id="4_s4dse"]

[node name="AbilityOptionSlot" type="Button"]
custom_minimum_size = Vector2(256, 384)
anchors_preset = -1
anchor_right = 0.237
anchor_bottom = 0.533
offset_right = 0.039978
offset_bottom = 0.23996
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("3_brdx4")
autowrap_mode = 1
script = ExtResource("2_52ofi")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -128.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
texture = ExtResource("3_taed0")
expand_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="AbilityName" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 2
size_flags_stretch_ratio = 14.5
theme = ExtResource("4_s4dse")
theme_override_font_sizes/font_size = 20
text = "BARBARIAN"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control" type="ColorRect" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 8.17
color = Color(0.215902, 0.215902, 0.215902, 1)

[node name="AbilityDescription" type="RichTextLabel" parent="VBoxContainer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 10
text = "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa"
fit_content = true
scroll_active = false
shortcut_keys_enabled = false

[connection signal="button_down" from="." to="." method="_on_button_down"]
